@@ -209,6 +209,8 @@ Version 2.0.0 FINAL - The "Tiku - the one and only" version.
 		GonoszTopi.
 		* Removed krb5-libs require and krb5-devel buildprereq.
 		curl-lib and curl-devel is enough.
+		* Fixed an assertion in CFile.cpp, when browsing broken
+		symbolic links. Now aMule is aware of them.
 
 	volpol:
 		* Patch to fix use of deprecated functions in wxGTK-2.5.3.
